# kilnworks

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
docs/: connectors.md  limitations.md
evals/: golden.jsonl  smoke.jsonl
evals/smoke-corpus/: alpha.md  beta.md  gamma.md
examples/corpus/: glaze-recipes.html  kiln-basics.md  onboarding.md
site/: CNAME  index.html  site.webmanifest  styles.css
src/kilnworks/: cli.py  settings.py  wiring.py
tests/: conftest.py  test_cli.py  test_package.py  test_settings.py  test_wiring.py
tests/adapters/: args_echo_mcp_server.py  env_echo_mcp_server.py  hang_mcp_server.py  no_limit_mcp_server.py  stub_mcp_server.py  test_anthropic_adapter.py  test_audio.py  test_connectors.py  test_contracts.py  test_cost_recorder.py  test_fake_embedder.py  test_fake_llm.py  test_fake_media.py  test_imaging.py  test_jobqueue.py  test_localfolder.py  test_mcp_stdio.py  test_ollama_adapters.py  test_openai_adapters.py  test_parser_metadata.py  test_parsers.py  test_pgvector_store.py  test_singlefile.py  test_transcribe_local.py  test_transcribe_openai.py  test_vision_anthropic.py  test_vision_ollama.py  test_vision_openai.py
tests/api/: conftest.py  test_ask_endpoints.py  test_auth_endpoints.py  test_connectors.py  test_db_down.py  test_document_management.py  test_oidc_endpoints.py  test_static_ui.py  test_stream_endpoint.py  test_upload_endpoints.py  test_upload_to_answer_flow.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+94 files in other folders)
