[project]
name = "kilnworks"
version = "0.1.0"
description = "Production-grade, self-hostable RAG knowledge assistant"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "pgvector>=0.3",
    "openai>=1.30",
    "anthropic>=0.60",
    "httpx>=0.27",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyjwt[crypto]>=2.8",
    "argon2-cffi>=23.1",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "pillow>=10",
]

[project.optional-dependencies]
# Only needed when KILNWORKS_TRANSCRIPTION_PROVIDER=local; imported lazily by
# adapters/media/transcribe_local.py so the base install stays light and offline
# text/table ingestion never pulls in ctranslate2/onnxruntime.
local-whisper = ["faster-whisper>=1.0"]

[project.scripts]
kilnworks = "kilnworks.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
    "testcontainers[postgres]>=4.5",
    "httpx>=0.27",
    "reportlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kilnworks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Test fixtures intentionally use short HMAC keys; pyjwt warns on every
    # encode/decode. The keys are test-only and never used for real tokens.
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E501"]
